--- a/style_desktop.css
+++ b/style_desktop.css
@@ -10,7 +10,7 @@ body{
         padding-left: 3rem;
         padding-right: 3rem;
         margin: auto;
-        max-width: 1199px; /*ATTENTION*/
+        max-width: 1199px; /*Largeur d'écran max pour ordinateur moyen*/
     }
 }
 
@@ -256,13 +256,10 @@ form{
 .resultats{
     display: flex;
 }
-@media screen and (min-width: 1025px){
-    .resultats{
-        justify-content: space-between;
-    }
+@media screen and (min-width: 1024px){
     #hebergements{
         order: 1;
-        width: 56%;
+        flex: 1;
         padding: 2.5rem;
         border-radius: 1.5rem;
         background-color: #F2F2F2;
@@ -270,6 +267,7 @@ form{
     .populaires{
         order: 2;
         width: 28%;
+        margin-left: 2rem;
         padding: 2.5rem 2.25rem 2.5rem 2.25rem;
         border-radius: 1.5rem;
     }
@@ -286,7 +284,7 @@ form{
     margin-bottom: 0;
 }
 
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 1024px){
     /* Hébergements trouvés */
     .hebergements__conteneur{
         display: flex;
@@ -303,7 +301,7 @@ form{
     font-weight: bold;
     margin: 0.25rem;
 }
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 1024px){
     .plus{
         margin: 0.25rem;
     }
@@ -329,7 +327,7 @@ form{
     object-position: center;
     border-radius: 0.8rem 0.8rem 0 0;
 }
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 1024px){
     .image{
         height: 7.125rem; /* !!!!Si problème de hauteur au niveau visuel, c'est cette hauteur qu'il faut changer */
     }
@@ -371,7 +369,7 @@ form{
 .carte--populaire .image{
     border-radius: 0.8rem 0 0 0.8rem;
 }
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 1024px){
     .carte--populaire .image{
         width: 7.9rem;  
         height: 8.3rem;
@@ -385,7 +383,7 @@ form{
     max-width: 8.3rem;
     margin: 0.5rem;
 }
-@media screen and (min-width: 1025px){
+@media screen and (min-width: 1024px){
     .carte--populaire .carte__infos{
         margin-left: 1.25rem;
     }
