--- a/style_desktop.css
+++ b/style_desktop.css
@@ -7,8 +7,7 @@ body{
 @media screen and (min-width: 992px){
     .container{
         font-size: 0.8rem; /*A verif */
-        padding-left: 3.125rem;
-        padding-right: 3.125rem;
+        padding: 0 3.125rem 0 3.125rem;
         margin: auto;
         max-width: 1199px; /*Largeur d'écran max pour ordinateur moyen*/
     }
@@ -535,18 +534,12 @@ form{
 
 
 
-
-
-
-
 /* Pied-de-page */
 
 footer{
-    padding-top: 3rem;
-    margin-left: -1.2rem;
-    margin-right: -1.2rem;
-    /*padding: 1.5rem 1.5rem 0 1.5rem;*/
-    display: flex;
+    padding-top: 3.125rem;
+    padding-bottom: 0.125rem;
+    margin-bottom: -0.5rem; /* Sinon, espace entre bordure container et éléments intérieurs */
 }
 
 footer h3{
@@ -554,23 +547,26 @@ footer h3{
     margin-bottom: 1.5rem;
 }
 
-footer div{
-    min-width: 33%;
-    margin: 0 1.875rem 1.875rem 1.875rem;
-}
-
 footer ul{
     list-style-type: none;
     padding-left: 0;
-    margin-bottom: 0;
 }
 
 footer li{
-    margin-bottom: 0.8rem;
+    margin-bottom: 1.125rem;
 }
 
 @media screen and (min-width: 768px){
     footer{
+        margin-left: -3.125rem;
+        margin-right: -3.125rem;
+        padding-left: 3.125rem;
+        padding-right: 3.125rem;
         display: flex;
+        flex-direction: row;
     }
-}
+    footer div{
+        min-width: 33%;
+        margin-bottom: 2.125rem;
+    }
+}    
